src/objects/SSC_CurrentQuarterScore__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SSC_CurrentQuarterScore</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Controlled_Shipping__c</fullName>
        <label>Controlled Shipping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenerationDate__c</fullName>
        <label>Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3SubMetricName__c</fullName>
        <label>L3 SubMetric Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreOverrides__c</fullName>
        <label>Score Overrides</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubMetric_Name__c</fullName>
        <label>SubMetric Name</label>
        <referenceTo>SSC_SubMetric__c</referenceTo>
        <relationshipName>SSC_CurrentQuarterScore</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>VsCompetetorField__c</fullName>
        <label>Vs Competetor Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Supplier Current Quarter Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubMetric_Name__c</columns>
        <columns>Score__c</columns>
        <columns>GenerationDate__c</columns>
        <columns>L3SubMetricName__c</columns>
        <columns>Comments__c</columns>
        <columns>Month__c</columns>
        <columns>year__c</columns>
        <columns>ScoreOverrides__c</columns>
        <columns>VsCompetetorField__c</columns>
        <columns>Account__c</columns>
        <columns>Controlled_Shipping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Current Quarter Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>